[reworked] atletika, sporttestery

--- a/atletika/cviceni.html
+++ b/atletika/cviceni.html
@@ -48,7 +48,7 @@
     <div class="jumbotron jumbotron-fluid bg-light text-center">
       <div class="container">
         <h1 class="display-4">Soubor cvičení</h1>
-        <p class="lead text-muted">Cvičení vhodné pro 2. stupně základních škol.</p>
+        <p class="lead text-muted">Cvičení vhodné pro 2. stupeň základních škol a víceletá gymnázia.</p>
       </div>
     </div>
   </header>
