--- a/atletika/teorie.html
+++ b/atletika/teorie.html
@@ -75,26 +75,25 @@
 
           <h3 class="h4 pt-4" id="item-1">Úvod</h3>
           <hr class="my-4">
-          <p>Běh se v poslední době těší stále větší oblibě. Běh je pro člověka, hned po chůzi, druhým nejpřirozenějším
-            pohybem a prospívá našemu tělu. Abychom si však zdraví běháním neničili, je třeba o běhu a běhání vědět pár
-            informací, které se váží k technice běhu.</p>
+          <p>Běhání se v poslední době těší stále větší oblibě. Běh je hned po chůzi, druhým nejpřirozenějším pohybem.
+            Správné provedení běžeckého kroku i přispívá k našemu zdraví. Abychom se naučili správně a účelně běhat a
+            neničili si své klouby je potřeba se seznámit nejen se správnou běžeckou technikou, ale i se způsobem
+            odhalování svých případných chyb a jejich odstraňování. K tomu nám mohou pomoci i nové digitální pomůcky.
+          </p>
 
 
           <h3 class="h4 pt-4" id="item-2">Způsoby běhu</h3>
           <hr class="my-4">
-          <p>Při sledování <a href="https://www.youtube.com/watch?v=FuiJHJz4f5Q&t=492s">závodníka při sprintu na 100
-              m</a> jste si jistě všimli rozdílného postavení těla v
-            jednotlivých fázích závodní trati. Když závodník vystartuje ze startovních bloků tak je v mírném předklonu,
-            běžec běží po špičkách a postupně zrychluje. Tento běh odborníci nazývají <mark>šlapavý běh</mark>. V
-            polovině závodní
-            trati se sprintér narovnává a přechází v tzv. <mark>švihový způsob běhu</mark>, který slouží k udržení
-            potřebné
-            rychlosti. Švihový způsob běhu se využívá u ostatních atletických disciplín nebo také např. u volného běhu
-            při vašem rozcvičení v rámci hodiny tělesné výchovy. Oba způsoby běhu se využívají i v dalších atletických
-            disciplínách, kde atlet využívá rozběh, jako je například skok daleký, skok vysoký, překážkový běh nebo hod
-            oštěpem.</p>
-          <p>V další části vaší výuky se zaměříme pouze na švihový běh, který se budete snažit naučit a nacházet správné
-            či chybné provedení.</p>
+          <p>Při sledování <a href="https://www.youtube.com/watch?v=FuiJHJz4f5Q&t=492s">atletických závodů, například při běhu na 100 m trati</a>, jste si jistě všimli u sprintera,
+            rozdílného postavení těla v jednotlivých fázích závodní trati. Po startu, který je realizován ze startovních
+            bloků, je v mírném předklonu, běží po špičkách a postupně zrychluje a narovnává se. Tento běh se nazývá
+            <mark>šlapavý způsob běh</mark>. Přibližně po 30 m, kdy se narovná, dochází k dvojité práci kotníků a přechází do
+            <mark>švihového způsobu běhu</mark>. Tento způsob běhu, se využívá i v dalších atletických disciplínách, kde atlet
+            používá rozběh, jako je například skok daleký, skok vysoký nebo hod oštěpem. Ve větší míře se však využívá u
+            delších běžeckých tratí při udržování běžecké rychlosti. Používáte ho i při vašem rozcvičování v rámci
+            hodiny tělesné výchovy. Jelikož švihový způsob běhu využíváte v atletice i v dalších sportech ve větší míře,
+            proto se tomuto způsobu budeme následně věnovat se, snahou o vaše zlepšení a zdokonalení.
+
           <h4 class="h5 pt-2">Charakteristika švihového způsobu běhu</h4>
           <ul>
             <li>Slouží k ekonomickému udržování rychlosti běhu.</li>
@@ -108,19 +107,8 @@
 
           <h3 class="h4 pt-4" id="item-3">Biomechanika běhu</h3>
           <hr class="my-4">
-          <p>Ve fyzice jste se seznámili s pohybem a rychlostí, se sílou a skladem sil a také jste si definovali co je
-            to těžiště a seznámili jste se s Newtonovými pohybovými zákony. Nyní se podíváme, jak se fyzika uplatňuje
-            třeba i v pohybu jakým je běh. Odborníci mluví o tzv. biomechanice, což je věda, která se zabývá studiem
-            mechanických vlastností biologických objektů na všech úrovních. Biomechanika může studovat např. mechanické
-            vlastnosti buněčné membrány nebo cytoskeletu, nebo mechanické vlastnosti kostí a svalů, což je naše
-            zaměření.</p>
-          <p>Z biomechanického hlediska je tedy cílem běhu přemístění těžiště po stanovené dráze v co nejkratším čase.
-            Běžec se snaží správnou technikou minimalizovat jak vertikální, tak i horizontální výchylky svého
-            centrálního těžiště. Rychlost pohybu těžiště vpřed ovlivňuje <mark>setrvačná složka rychlosti</mark> získaná
-            v prvních
-            krocích výběhu a udržovaná během trati a <mark>odrazová složka rychlosti</mark>, která závisí na silových
-            schopnostech
-            běžce. Při běhu platí následující biomechanické zákonitosti:</p>
+          <p>Ve fyzice jste se seznámili s pohybem, rychlostí, sílou a skladem sil a také jste si definovali co je to těžiště a seznámili jste se s Newtonovými pohybovými zákony. Nyní se podíváme, jak se fyzika uplatňuje třeba i v pohybu jakým je běh. Odborníci mluví o tzv. biomechanice, což je věda, která se zabývá studiem mechanických vlastností biologických objektů na všech úrovních. Biomechanika může studovat např. mechanické vlastnosti buněčné membrány nebo cytoskeletu, nebo mechanické vlastnosti kostí a svalů, což je naše zaměření.</p>
+          <p>Z biomechanického hlediska je tedy cílem běhu přemístění těžiště po stanovené dráze v co nejkratším čase. Běžec se snaží správnou technikou minimalizovat jak vertikální, tak i horizontální výchylky svého centrálního těžiště. Rychlost pohybu těžiště vpřed ovlivňuje setrvačná složka rychlosti získaná v prvních krocích výběhu a udržovaná během trati a odrazová složka rychlosti, která závisí na silových schopnostech běžce. Při běhu platí následující biomechanické zákonitosti:</p>
           <ul>
             <li>Podložka musí být tak pevná, aby se vyrušila reakční složka hnací síly.</li>
             <li>Odrazová síla musí působit co nejblíže k těžišti.</li>
