--- a/plochonozi/diagnostika.html
+++ b/plochonozi/diagnostika.html
@@ -49,7 +49,7 @@
 		<div class="jumbotron jumbotron-fluid bg-light text-center">
 			<div class="container">
 				<h1 class="display-4">Metoda Chippaux-Šmiřák</h1>
-				<p class="lead text-muted">Diagnostika stavu nožní klenby</p>
+				<p class="lead text-muted">Diagnostika stavu nožní klenby.</p>
 			</div>
 		</div>
 	</header>
