--- a/zdatnost/teorie.html
+++ b/zdatnost/teorie.html
@@ -39,7 +39,6 @@
                           <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
                           <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
                           <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
-                          <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                       </div>
                   </li>
               </ul>
@@ -50,7 +49,7 @@
     <div class="jumbotron jumbotron-fluid bg-light text-center">
       <div class="container">
         <h1 class="display-4">Úvod do problematiky</h1>
-        <p class="lead text-muted">Srdeční frekvence, aerobní a anaerobní pásmo</p>
+        <p class="lead text-muted">Srdeční frekvence, aerobní a anaerobní pásmo.</p>
       </div>
     </div>
   </header>
@@ -189,28 +188,38 @@
           <h3 class="h4 pt-4" id="item-7">Použitá literatura</h3>
           <hr class="my-4">
           <div class="references">
-            <p>Zdroj 1</p>
-            <p>Zdroj 2</p>
-            <p>Zdroj 3</p>
+            <p>Bartůňková, S. (2010). <i>Fyziologie člověka a tělesných cvičení</i>. Praha: Karolinum.</p>
+            <p>Havlíčková, L. (2004). <i>Fyziologie tělesné zátěže 1</i>. Praha: Karolinum.</p>
+            <p>Neumann, G., Pfützner, A., & Hottenrott, K. (2005). <i>Trénink pod kontrolou</i>. Praha: Grada.</p>
           </div>
         </div>
       </div>
     </div>
-  </main>
-
-  <footer class="footer mt-auto py-3 text-muted bg-dark">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti</p>
-        </div>
-        <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
-        </div>
-      </div>
-    </div>
-    </div>
-  </footer>
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer class="footer mt-auto py-3 text-muted bg-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+							rozvoje digitální gramotnosti</a>
+					</p>
+				</div>
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
