--- a/zdatnost/test.html
+++ b/zdatnost/test.html
@@ -38,7 +38,6 @@
                                 <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
                                 <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
                                 <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
-                                <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                             </div>
                         </li>
                     </ul>
@@ -72,6 +71,13 @@
 				</div>
 			</div>
 		</div>
+        <div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
 		</div>
 	</main>
 
@@ -79,14 +85,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+							rozvoje digitální gramotnosti</a>
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019/p>
 				</div>
 			</div>
-		</div>
 		</div>
 	</footer>
 
