--- a/atletika/test.html
+++ b/atletika/test.html
@@ -48,7 +48,7 @@
 		<div class="jumbotron jumbotron-fluid bg-light text-center">
 			<div class="container">
 				<h1 class="display-4">Vědomostní kvíz</h1>
-				<p class="lead text-muted">Kvíz pro základní a střední školy.</p>
+				<p class="lead text-muted">Kvíz pro základní školy a víceletá gymnázia.</p>
 			</div>
 		</div>
 	</header>
