--- a/zdatnost/index.html
+++ b/zdatnost/index.html
@@ -38,7 +38,6 @@
                                 <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
                                 <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
                                 <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
-                                <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                             </div>
                         </li>
                     </ul>
@@ -86,34 +85,35 @@
                     <div class="card-body d-flex align-items-center justify-content-center">
                         <h5 class="card-title text-center">Testování zdatnosti</h5>
                     </div>
-                    <small class="card-footer text-right">Diagnostika</small>
-                </a>
-                <div class="w-100 d-none d-sm-block d-md-block d-lg-none mb-4"></div>
-                <!-- wrap every 2 on sm-->
-                <a href="cviceni.html" class="card border-dark shadow-sm d-flex custom-card">
-                    <div class="card-body d-flex align-items-center justify-content-center">
-                        <h5 class="card-title text-center">Soubor cvičení</h5>
-                    </div>
-                    <small class="card-footer text-right">Rozvoj</small>
+                    <small class="card-footer text-right">Diagnostika / Výuka</small>
                 </a>
             </div>
         </div>
-    </main>
-
-    <footer class="footer mt-auto py-3 text-muted bg-dark">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 py-1">
-                    <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
-                    </p>
-                </div>
-                <div class="col-lg-6 py-1">
-                    <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
-                </div>
-            </div>
-        </div>
-        </div>
-    </footer>
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer class="footer mt-auto py-3 text-muted bg-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+							rozvoje digitální gramotnosti</a>
+					</p>
+				</div>
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
