[added] Xiaomi postup, kalkulačky pro zjištění TF

--- a/zdatnost/metody.html
+++ b/zdatnost/metody.html
@@ -331,7 +331,7 @@
 						komunikují jak s telefony s operačním systémem Android, tak i s iOS. Pořizovací hodnota těchto
 						přístrojů se pohybuje od řádů stokorun do několika tisíc, vždy záleží, jaké funkce resp.
 						zařízení tento náramek skrývá uvnitř.</p>
-					<p>Následuje krátký fotografický postup (Obrázek X–X), jak měřit TF s použitím fitness náramku
+					<!-- <p>Následuje krátký fotografický postup (Obrázek X–X), jak měřit TF s použitím fitness náramku
 						Xiaomi Mi Band 1S.</p>
 					<div class="card border-dark shadow-sm d-flex mt-4">
 						<div class="card-header">
@@ -378,7 +378,7 @@
 								využitím fitness náramku Xiaomi Mi Band 1S
 							</figcaption>
 						</div>
-					</div>
+					</div> -->
 
 					<h3 class="h4 pt-5" id="item-6">Měření TF s využitím sporttesteru nebo chytrých hodinek</h3>
 					<hr class="my-4">
@@ -402,50 +402,82 @@
 						těsně pod kůží. Pokud jedinec nepotřebuje analyzovat zcela přesné hodnoty srdeční frekvence, je
 						lepší volba tohoto zařízení.</p>
 
-					<p>Následuje krátký fotografický postup (Obrázek X–X), jak měřit TF s použitím chytrých hodinek Xiaomi Amazfit Stratos.</p>
+					<p>Následuje krátká fotografická prezentace chytrých hodinek Xiaomi Amazfit Stratos a jejich nástrojů pro zjištění a analýzy (Obrázek 9–14).</p>
 
 					<div class="card border-dark shadow-sm d-flex mt-4">
 						<div class="card-header">
 							<h5 class="h6 mb-0">Měření TF s využitím chytrých hodinek Xiaomi Amazfit Stratos</h5>
 						</div>
 						<div class="card-body">
-							<p>TO-DO</p>
 							<div class="row justify-content-center">
 								<div class="col-lg-3">
 									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="https://via.placeholder.com/200x300"
-											data-lightbox="hodinky"
-											data-title="Měření TF s využitím chytrých hodinek – 1. krok">
-											<img src="https://via.placeholder.com/200x300"
+										<a class="lightbox-style" href="imgs/stratos-01.jpg" data-lightbox="hodinky-prubeh"
+											data-title="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne">
+											<img src="imgs/stratos-01.jpg"
 												class="figure-img img-fluid rounded mx-auto d-block"
-												alt="Měření TF s využitím chytrých hodinek – 1. krok">
+												alt="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne">
 										</a>
 									</figure>
 								</div>
 								<div class="col-lg-3">
 									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="https://via.placeholder.com/200x300"
-											data-lightbox="hodinky"
-											data-title="Měření TF s využitím chytrých hodinek – 2. krok">
-											<img src="https://via.placeholder.com/200x300"
+										<a class="lightbox-style" href="imgs/stratos-05.jpg" data-lightbox="hodinky-prubeh"
+											data-title="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (průměrná, minimální a maximální TF)">
+											<img src="imgs/stratos-05.jpg"
 												class="figure-img img-fluid rounded mx-auto d-block"
-												alt="Měření TF s využitím chytrých hodinek – 2. krok">
+												alt="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (průměrná, minimální a maximální TF)">
+										</a>
+									</figure>
+								</div>
+								<div class="col-lg-3">
+										<figure class="figure mx-auto d-block pt-4">
+											<a class="lightbox-style" href="imgs/stratos-06.jpg" data-lightbox="hodinky-prubeh"
+												data-title="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (zóny)">
+												<img src="imgs/stratos-06.jpg"
+													class="figure-img img-fluid rounded mx-auto d-block"
+													alt="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (zóny)">
+											</a>
+										</figure>
+									</div>
+							</div>
+							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 9–11</strong> Měření TF v
+								průběhu dne
+							</figcaption>
+							<div class="row justify-content-center">
+								<div class="col-lg-3">
+									<figure class="figure mx-auto d-block pt-4">
+										<a class="lightbox-style" href="imgs/stratos-03.jpg" data-lightbox="hodinky-aktualni"
+											data-title="Měření TF s využitím chytrých hodinek – měření aktuální TF (výsledek)">
+											<img src="imgs/stratos-03.jpg"
+												class="figure-img img-fluid rounded mx-auto d-block"
+												alt="Měření TF s využitím chytrých hodinek – měření aktuální TF (výsledek)">
 										</a>
 									</figure>
 								</div>
 								<div class="col-lg-3">
 									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="https://via.placeholder.com/200x300"
-											data-lightbox="hodinky"
-											data-title="Měření TF s využitím chytrých hodinek – 3. krok">
-											<img src="https://via.placeholder.com/200x300"
+										<a class="lightbox-style" href="imgs/stratos-02.jpg" data-lightbox="hodinky-aktualni"
+											data-title="Měření TF s využitím chytrých hodinek – měření aktuální TF">
+											<img src="imgs/stratos-02.jpg"
 												class="figure-img img-fluid rounded mx-auto d-block"
-												alt="Měření TF s využitím chytrých hodinek – 3. krok">
+												alt="Měření TF s využitím chytrých hodinek – měření aktuální TF">
+										</a>
+									</figure>
+								</div>
+
+								<div class="col-lg-3">
+									<figure class="figure mx-auto d-block pt-4">
+										<a class="lightbox-style" href="imgs/stratos-04.jpg" data-lightbox="hodinky-aktualni"
+											data-title="Měření TF s využitím chytrých hodinek – měření aktuální TF (hodnocení)">
+											<img src="imgs/stratos-04.jpg"
+												class="figure-img img-fluid rounded mx-auto d-block"
+												alt="Měření TF s využitím chytrých hodinek – měření aktuální TF (hodnocení)">
 										</a>
 									</figure>
 								</div>
 							</div>
-							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek X–X</strong> Měření TF s využitím chytrých hodinek Xiaomi Amazfit Stratos
+							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 12–14</strong> Měření aktuální TF
 							</figcaption>
 						</div>
 					</div>
@@ -506,8 +538,20 @@
 
 					<h3 class="h4 pt-5" id="item-9">Zjištění maximální TF a výpočet prahových hodnot</h3>
 					<hr class="my-4">
-					<p>TO-DO
-					</p>
+					<p>V úvodu do problematiky jsme mluvili o maximální tepové frekvenci a aerobní, či anaerobní zóně.
+						Proto, abychom věděli, kdy se ve které zóně během pohybové aktivity nacházíme, je nutné
+						vypočítat prahové hodnoty, tedy aerobní a anaerobní práh.</p>
+					<p>Pro výpočet zmíněných hodnot můžeme využít mnoho nástrojů, od fitness náramků po sporttestery.
+						Pokud však tato zařízení nevlastníme, můžeme zmíněné hodnoty vypočítat dle základního obecného
+						vzorce. V tomto případě doporučujeme využít jednu z online kalkulařček:</p>
+					<ul>
+						<li><a href="https://www.bezhladoveni.cz/kalkulacka-tepove-frekvence/">Kalkulačka tepové
+								frekvence pro spalování tuků</a></li>
+						<li><a href="https://www.svet-zdravi.cz/kalkulacky">Spočítejte si vaši tepovou frekvenci</a>
+						</li>
+						<li><a href="http://www.spinattic.cz/vypocet-tepove-frekvence">Výpočet tepové frekvence</a></li>
+					</ul>
+
 
 					<h3 class="h4 pt-5" id="item-10">Slovníček – základní funkce fitness náramků a sporttesterů</h3>
 					<hr class="my-4">
