[fixed] přepsaný text (max tf, výpočet prahů)

--- a/zdatnost/metody.html
+++ b/zdatnost/metody.html
@@ -538,12 +538,11 @@
 
 					<h3 class="h4 pt-5" id="item-9">Zjištění maximální TF a výpočet prahových hodnot</h3>
 					<hr class="my-4">
-					<p>V úvodu do problematiky jsme mluvili o maximální tepové frekvenci a aerobní, či anaerobní zóně.
-						Proto, abychom věděli, kdy se ve které zóně během pohybové aktivity nacházíme, je nutné
-						vypočítat prahové hodnoty, tedy aerobní a anaerobní práh.</p>
-					<p>Pro výpočet zmíněných hodnot můžeme využít mnoho nástrojů, od fitness náramků po sporttestery.
-						Pokud však tato zařízení nevlastníme, můžeme zmíněné hodnoty vypočítat dle základního obecného
-						vzorce. V tomto případě doporučujeme využít jednu z online kalkulařček:</p>
+					<p>V úvodu do problematiky jsme mluvili o maximální tepové frekvenci a aerobní/anaerobní zóně.
+						Abychom věděli, kdy se ve které zóně během pohybové aktivity nacházíme, je nutné
+						zjistit prahové hodnoty, tedy aerobní a anaerobní práh.</p>
+					<p>Pro výpočet zmíněných hodnot můžeme využít různé nástroje, od fitness náramků po sporttestery.
+						Pokud však žádné z těchto zařízení nevlastníme, můžeme hodnoty vypočítat dle základních vzorců. V tomto případě doporučujeme využít jednu z online kalkulaček:</p>
 					<ul>
 						<li><a href="https://www.bezhladoveni.cz/kalkulacka-tepove-frekvence/">Kalkulačka tepové
 								frekvence pro spalování tuků</a></li>
