--- a/zdatnost/metody.html
+++ b/zdatnost/metody.html
@@ -402,7 +402,8 @@
 						těsně pod kůží. Pokud jedinec nepotřebuje analyzovat zcela přesné hodnoty srdeční frekvence, je
 						lepší volba tohoto zařízení.</p>
 
-					<p>Následuje krátká fotografická prezentace chytrých hodinek Xiaomi Amazfit Stratos a jejich nástrojů pro zjištění a analýzy (Obrázek 9–14).</p>
+					<p>Následuje krátká fotografická prezentace chytrých hodinek Xiaomi Amazfit Stratos a jejich
+						nástrojů pro zjištění a analýzy (Obrázek 9–14).</p>
 
 					<div class="card border-dark shadow-sm d-flex mt-4">
 						<div class="card-header">
@@ -412,7 +413,8 @@
 							<div class="row justify-content-center">
 								<div class="col-lg-3">
 									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="imgs/stratos-01.jpg" data-lightbox="hodinky-prubeh"
+										<a class="lightbox-style" href="imgs/stratos-01.jpg"
+											data-lightbox="hodinky-prubeh"
 											data-title="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne">
 											<img src="imgs/stratos-01.jpg"
 												class="figure-img img-fluid rounded mx-auto d-block"
@@ -422,7 +424,8 @@
 								</div>
 								<div class="col-lg-3">
 									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="imgs/stratos-05.jpg" data-lightbox="hodinky-prubeh"
+										<a class="lightbox-style" href="imgs/stratos-05.jpg"
+											data-lightbox="hodinky-prubeh"
 											data-title="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (průměrná, minimální a maximální TF)">
 											<img src="imgs/stratos-05.jpg"
 												class="figure-img img-fluid rounded mx-auto d-block"
@@ -431,23 +434,37 @@
 									</figure>
 								</div>
 								<div class="col-lg-3">
-										<figure class="figure mx-auto d-block pt-4">
-											<a class="lightbox-style" href="imgs/stratos-06.jpg" data-lightbox="hodinky-prubeh"
-												data-title="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (zóny)">
-												<img src="imgs/stratos-06.jpg"
-													class="figure-img img-fluid rounded mx-auto d-block"
-													alt="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (zóny)">
-											</a>
-										</figure>
-									</div>
+									<figure class="figure mx-auto d-block pt-4">
+										<a class="lightbox-style" href="imgs/stratos-06.jpg"
+											data-lightbox="hodinky-prubeh"
+											data-title="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (zóny)">
+											<img src="imgs/stratos-06.jpg"
+												class="figure-img img-fluid rounded mx-auto d-block"
+												alt="Měření TF s využitím chytrých hodinek – měření TF v průběhu dne (zóny)">
+										</a>
+									</figure>
+								</div>
 							</div>
-							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 9–11</strong> Měření TF v
+							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 9–11</strong> Měření TF
+								v
 								průběhu dne
 							</figcaption>
 							<div class="row justify-content-center">
 								<div class="col-lg-3">
 									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="imgs/stratos-03.jpg" data-lightbox="hodinky-aktualni"
+										<a class="lightbox-style" href="imgs/stratos-02.jpg"
+											data-lightbox="hodinky-aktualni"
+											data-title="Měření TF s využitím chytrých hodinek – měření aktuální TF">
+											<img src="imgs/stratos-02.jpg"
+												class="figure-img img-fluid rounded mx-auto d-block"
+												alt="Měření TF s využitím chytrých hodinek – měření aktuální TF">
+										</a>
+									</figure>
+								</div>
+								<div class="col-lg-3">
+									<figure class="figure mx-auto d-block pt-4">
+										<a class="lightbox-style" href="imgs/stratos-03.jpg"
+											data-lightbox="hodinky-aktualni"
 											data-title="Měření TF s využitím chytrých hodinek – měření aktuální TF (výsledek)">
 											<img src="imgs/stratos-03.jpg"
 												class="figure-img img-fluid rounded mx-auto d-block"
@@ -457,18 +474,8 @@
 								</div>
 								<div class="col-lg-3">
 									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="imgs/stratos-02.jpg" data-lightbox="hodinky-aktualni"
-											data-title="Měření TF s využitím chytrých hodinek – měření aktuální TF">
-											<img src="imgs/stratos-02.jpg"
-												class="figure-img img-fluid rounded mx-auto d-block"
-												alt="Měření TF s využitím chytrých hodinek – měření aktuální TF">
-										</a>
-									</figure>
-								</div>
-
-								<div class="col-lg-3">
-									<figure class="figure mx-auto d-block pt-4">
-										<a class="lightbox-style" href="imgs/stratos-04.jpg" data-lightbox="hodinky-aktualni"
+										<a class="lightbox-style" href="imgs/stratos-04.jpg"
+											data-lightbox="hodinky-aktualni"
 											data-title="Měření TF s využitím chytrých hodinek – měření aktuální TF (hodnocení)">
 											<img src="imgs/stratos-04.jpg"
 												class="figure-img img-fluid rounded mx-auto d-block"
@@ -477,7 +484,8 @@
 									</figure>
 								</div>
 							</div>
-							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 12–14</strong> Měření aktuální TF
+							<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 12–14</strong> Měření
+								aktuální TF
 							</figcaption>
 						</div>
 					</div>
@@ -542,7 +550,8 @@
 						Abychom věděli, kdy se ve které zóně během pohybové aktivity nacházíme, je nutné
 						zjistit prahové hodnoty, tedy aerobní a anaerobní práh.</p>
 					<p>Pro výpočet zmíněných hodnot můžeme využít různé nástroje, od fitness náramků po sporttestery.
-						Pokud však žádné z těchto zařízení nevlastníme, můžeme hodnoty vypočítat dle základních vzorců. V tomto případě doporučujeme využít jednu z online kalkulaček:</p>
+						Pokud však žádné z těchto zařízení nevlastníme, můžeme hodnoty vypočítat dle základních vzorců.
+						V tomto případě doporučujeme využít jednu z online kalkulaček:</p>
 					<ul>
 						<li><a href="https://www.bezhladoveni.cz/kalkulacka-tepove-frekvence/">Kalkulačka tepové
 								frekvence pro spalování tuků</a></li>
