[reworked] zdatnost (img, soubor cvičení)

--- a/zdatnost/diagnostika.html
+++ b/zdatnost/diagnostika.html
@@ -37,8 +37,9 @@
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
 								<a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
 								<a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-								<a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
+								<a class="dropdown-item" href="metody.html">Metody hodnocení tepové frekvence</a>
 								<a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+								<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
 							</div>
 						</li>
 					</ul>
@@ -49,7 +50,7 @@
 		<div class="jumbotron jumbotron-fluid bg-light text-center">
 			<div class="container">
 				<h1 class="display-4">Testování zdatnosti</h1>
-				<p class="lead text-muted">Příklady vyučovací hodiny, testování oběhové soustavy v praxi.</p>
+				<p class="lead text-muted">Testování oběhové soustavy.</p>
 			</div>
 		</div>
 	</header>
@@ -60,19 +61,14 @@
 				<div class="col-lg-3">
 					<div class="sidebar-item">
 						<div id="content-menu" class="list-group">
-							<a class="list-group-item list-group-item-action content-button" href="#item-1">Testy
-								oběhové soustavy</a>
-							<a class="list-group-item list-group-item-action content-button" href="#item-2">Příklad
-								vyučovací jednotky</a>
-							<a class="list-group-item list-group-item-action content-button" href="#item-3">Drobné
-								hříčky s monitorem tepové frekvence</a>
+							<a class="list-group-item list-group-item-action content-button" href="#item-1">Ruffierův test</a>
+							<a class="list-group-item list-group-item-action content-button" href="#item-2">Harvardský Step-Test</a>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-9">
-					<h3 class="h4 pt-4" id="item-1">Testy oběhové soustavy</h3>
+				<div class="col-lg-9">			
+					<h3 class="h4 pt-4" id="item-1">Ruffierův test</h3>
 					<hr class="my-4">
-					<h4 class="h5 pt-2">1. Ruffierův test</h4>
 					<p>Ruffierův test je jednoduchá standardizovaná funkční zkouška pro stanovení úrovně zdatnosti
 						oběhové soustavy. Měřené parametry jsou klidová tepová frekvence, tepová frekvence po 30 dřepech
 						vykonaných za 45 s a tepová frekvence 1 minutu po tomto zatížení.</p>
@@ -151,7 +147,8 @@
 							</tbody>
 						</table>
 					</div>
-					<h4 class="h5 pt-4">2. Harvardský Step-Test</h4>
+					<h3 class="h4 pt-4" id="item-2">Harvardský Step-Test</h3>
+					<hr class="my-4">
 					<p>Žák opakovaně vystupuje na stupínek frekvenci 30 výstupů za minutu, výška stupínku je pro děti
 						stanovená na 30 cm.</p>
 					<p>Doba trvání testu je obvykle 5 minut, je možné využít i jiný čas trvání testu. Zvolený čas testu
@@ -196,83 +193,6 @@
 							</tbody>
 						</table>
 					</div>
-
-
-					<h3 class="h4 pt-4" id="item-2">Příklad vyučovací jednotky</h3>
-					<hr class="my-4">
-					<h4 class="h5 pt-2">Kruhový provoz s monitorováním TF</h4>
-					<p><strong>Cíl:</strong> Žáci se naučí, jak reaguje tepová frekvence (TF) na odlišný typ zatížení.
-					</p>
-					<ul>
-						<li>Poznají, jak jednotlivá cvičení zvyšují či snižují TF.</li>
-						<li>Poznají, že zapojení odlišného množství svalových skupin ovlivňuje různým způsobem TF.</li>
-						<li>Poznají, že odlišné polohy (sed, leh) odlišně ovlivňují TF.</li>
-					</ul>
-					<p><strong>Pomůcky:</strong> Monitor TF, pomůcky pro kruhový provoz.</p>
-					<p><strong>Trvání:</strong> 45 minut.</p>
-					<p><strong>Struktura jednotky:</strong></p>
-					<ul>
-						<li>5 min úvod – nastavení monitorů,</li>
-						<li>10 min rozcvičení,</li>
-						<li>20 min hlavní část,</li>
-						<li>10 min závěrečná část.</li>
-					</ul>
-					<p><strong>Základní koncept a aktivity:</strong> Za pomoci monitoru TF žáci zjistí, že TF je
-						striktně individuální. Naučí se jak prostřednictvím odlišných cvičení a pohybových prvků a
-						operací mohou zvyšovat či snižovat hodnoty TF</p>
-					<p><strong>Úvod:</strong> V této fázi si studenti nasadí monitory TF a nastaví pro záznam TF.</p>
-					<p><strong>Rozcvičení:</strong> V této fázi volíme prostředky zatížení, které umožní dosáhnout 60–70
-						% maxima.</p>
-					<p><strong>Hlavní část:</strong> Žáci absolvují kruhový provoz. Uvádíme příklad: Vytvořte dva kruhy.
-						Vnější kruh je věnován silovým cvičením a obsahuje 10 stanovišť. Kombinujte zapojení vícero
-						svalových skupin (břišní, svalstvo paží, zad). Vnitřní kruh je určen pro aerobní cvičení (běh na
-						místě, poskoky na místě, využití švihadel, apod.). Mezi každé silové cvičení vkládáme aerobní
-						aktivitu ve
-						vnitřním kruhu. Je možné cvičit na jednom stanovišti 1 min a absolvovat celý kruhový provoz
-						právě jednou, anebo volit délku cvičení 30 s a zkompletovat dva okruhy. Cílová zóna pro silová
-						cvičení je 60–70 % maxima a pro aerobní cvičení je to 70–90 % maximální TF.</p>
-					<figure class="figure mx-auto d-block w-50 py-4">
-						<a class="lightbox-style" href="imgs/tv-hodina.png" data-lightbox="tv-hodina"
-							data-title="Kruhový provoz hodiny TV">
-							<img src="imgs/tv-hodina.png" class="figure-img img-fluid rounded mx-auto d-block"
-								alt="Kruhový provoz hodiny TV">
-						</a>
-						<figcaption class="figure-caption text-center"><strong>Obrázek 1</strong> Kruhový provoz hodiny
-							TV</figcaption>
-					</figure>
-					<p><strong>Závěrečná část:</strong> Po skončení hlavní části zařadíme aktivity vedoucí k poklesu TF,
-						např. volná chůze po několik minut, dechová cvičení, protažení apod. Cílová zóna je v oblasti
-						pod
-						60 % maxima.</p>
-					<p><strong>Možná rozšíření:</strong> Žáci mohou vytvářet vlastní obsah kruhového provozu.</p>
-					<p>V rámci vyhodnocení necháme žáky prostřednictvím aplikace z fitness náramku nebo sporttesteru
-						zhotovit grafický záznam
-						průběhu TF v hodině TV, detekovat minimální, průměrnou a maximální TF. Vše individuálně v rámci
-						domácí přípravy. Hodnoty a grafy lze sdílet ať už ve virtuálním prostoru, nebo prostřednictvím
-						nástěnek ve škole či třídě. V rámci další hodiny TV popř. teoretického předmětu (biologie,
-						přírodopis) stručně zhodnotíme.</p>
-
-
-					<h3 class="h4 pt-4" id="item-3">Drobné
-						hříčky s monitorem tepové frekvence</h3>
-					<hr class="my-4">
-					<h4 class="h5 pt-2">1. „Drž úhel (tep)“</h4>
-					<p>V rámci rušné části (optimálně rozběhání kolem tělocvičny v jenom směru) se žáci pokusí běžet
-						tempem které odpovídá učitelem nahlášené tepové frekvenci. U starších žáků můžeme použít
-						procentuální údaj z maxima. U mladších konkrétní hodnotu TF. Volíme takovou, které jsou schopni
-						dosáhnout všichni žáci (od 60 do 85 % maxima)</p>
-					<h4 class="h5 pt-4">2. „Kdo dá víc“</h4>
-					<p>Na závěr úvodní části popř. v rámci hlavní necháme žáky individuálně stupňovat tempo běhu
-						(tělocvična, ovál, popř. se změnami směru) za účelem dosažení maximálních hodnot. Ty můžeme
-						navzájem porovnat. Cvičení maximálně 5 minut.</p>
-					<h4 class="h5 pt-4">3. „Chill out contest“</h4>
-					<p>Opak předchozí aktivity. V rámci závěrečné hodiny zařadíme zklidňující blok, popř. dechová
-						cvičení za účelem snížení hodnoty tepové frekvence. „Soutěžíme“, kdo naměří nejnižší hodnoty.
-					</p>
-					<h4 class="h5 pt-4">4. Matematika v tělocvičně</h4>
-					<p>Zadáme početní příklad (řešitelný zpaměti a jehož výsledek odpovídá dosažitelné tepové
-						frekvenci). Necháme žáky provádět libovolnou pohybovou aktivitu. Vítězí první, jehož tepové
-						frekvence bude odpovídat správnému výsledku.</p>
 				</div>
 			</div>
 		</div>
@@ -286,7 +206,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 21.09.2019</p>
 				</div>
 			</div>
 		</div>
