--- a/zdatnost/index.html
+++ b/zdatnost/index.html
@@ -36,8 +36,9 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                                 <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                                 <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                                <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
-                                <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+                                <a class="dropdown-item" href="metody.html">Metody hodnocení tepové frekvence</a>
+								<a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+								<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                             </div>
                         </li>
                     </ul>
@@ -77,7 +78,7 @@
                 <!-- wrap every 2 on sm-->
                 <a href="metody.html" class="card border-dark shadow-sm d-flex custom-card">
                     <div class="card-body d-flex align-items-center justify-content-center">
-                        <h5 class="card-title text-center">Metody hodnocení zdatnosti</h5>
+                        <h5 class="card-title text-center">Metody hodnocení tepové frekvence</h5>
                     </div>
                     <small class="card-footer text-right">Metody</small>
                 </a>
@@ -85,7 +86,15 @@
                     <div class="card-body d-flex align-items-center justify-content-center">
                         <h5 class="card-title text-center">Testování zdatnosti</h5>
                     </div>
-                    <small class="card-footer text-right">Diagnostika / Výuka</small>
+                    <small class="card-footer text-right">Diagnostika</small>
+                </a>
+                <div class="w-100 d-none d-sm-block d-md-block d-lg-none mb-4"></div>
+                <!-- wrap every 2 on sm-->
+                <a href="cviceni.html" class="card border-dark shadow-sm d-flex custom-card">
+                    <div class="card-body d-flex align-items-center justify-content-center">
+                        <h5 class="card-title text-center">Soubor cvičení</h5>
+                    </div>
+                    <small class="card-footer text-right">Výuka</small>
                 </a>
             </div>
         </div>
@@ -109,7 +118,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 21.09.2019</p>
 				</div>
 			</div>
 		</div>
