--- a/zdatnost/metody.html
+++ b/zdatnost/metody.html
@@ -13,7 +13,7 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>DG – Zdatnost | Metody</title>
+	<title>DG – Zdatnost | Metody hodnocení tepové frekvence</title>
 </head>
 
 <body class="d-flex flex-column h-100" data-spy="scroll" data-target="#content-menu" data-offset="100">
@@ -37,8 +37,9 @@
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
 								<a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
 								<a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-								<a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
+								<a class="dropdown-item" href="metody.html">Metody hodnocení tepové frekvence</a>
 								<a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+								<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
 							</div>
 						</li>
 					</ul>
@@ -48,7 +49,7 @@
 
 		<div class="jumbotron jumbotron-fluid bg-light text-center">
 			<div class="container">
-				<h1 class="display-4">Metody hodnocení zdatnosti</h1>
+				<h1 class="display-4">Metody hodnocení tepové frekvence</h1>
 				<p class="lead text-muted">Měření tepové frekvence.</p>
 			</div>
 		</div>
@@ -620,7 +621,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 21.09.2019</p>
 				</div>
 			</div>
 		</div>
