--- a/zdatnost/teorie.html
+++ b/zdatnost/teorie.html
@@ -37,8 +37,9 @@
                       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                           <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                           <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                          <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
-                          <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+                          <a class="dropdown-item" href="metody.html">Metody hodnocení tepové frekvence</a>
+								          <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+								          <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                       </div>
                   </li>
               </ul>
@@ -178,9 +179,9 @@
           <p>Důležitým znakem trénovanosti je také schopnost udržet plynulé tempo ve stejné srdeční frekvenci. 
             Znakem netrénovanosti je neustálé kolísání frekvence a změna tempa.</p>
           <figure class="figure mx-auto d-block w-75 py-4">
-						<a class="lightbox-style" href="https://via.placeholder.com/600x300" data-lightbox="srdecni-frekvence"
+						<a class="lightbox-style" href="imgs/trenink_graf.svg" data-lightbox="srdecni-frekvence"
 							data-title="Ukázka průběhu srdeční frekvence při cvičení v aerobní zóně">
-							<img src="https://via.placeholder.com/600x300" class="figure-img img-fluid rounded mx-auto d-block"
+							<img src="imgs/trenink_graf.svg" class="figure-img img-fluid rounded mx-auto d-block"
 								alt="Ukázka průběhu srdeční frekvence při cvičení v aerobní zóně">
 						</a>
 						<figcaption class="figure-caption text-center"><strong>Obrázek 1</strong> Ukázka průběhu srdeční frekvence při cvičení v aerobní zóně</figcaption>
@@ -215,7 +216,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 21.09.2019</p>
 				</div>
 			</div>
 		</div>
