--- a/zdatnost/test.html
+++ b/zdatnost/test.html
@@ -12,7 +12,7 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>DG – Zdatnost | Vědomostní kvíz</title>
+	<title>DG – Zdatnost | Testování zdatnosti</title>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -36,8 +36,9 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                                 <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                                 <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                                <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
-                                <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+                                <a class="dropdown-item" href="metody.html">Metody hodnocení tepové frekvence</a>
+								<a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+								<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                             </div>
                         </li>
                     </ul>
@@ -91,7 +92,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 12.09.2019/p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 21.09.2019/p>
 				</div>
 			</div>
 		</div>
