[revision] aerobic/anaerobic paragraphs

--- a/zdatnost/teorie.html
+++ b/zdatnost/teorie.html
@@ -98,15 +98,33 @@
             budeme v našem případě používat termín srdeční frekvence.</p>
           <h3 class="h4 pt-4" id="item-4">Aerobní/anaerobní pásmo</h3>
           <hr class="my-4">
-          <p><mark>Aerobní pásmo</mark> je zóna vhodná pro pohybové aktivity. V této zóně dochází v těle k fyziologickým
-            procesům za přístupu kyslíku.
-            Jedná se o pásmo přibližně 55–85 % vaší SF<sub>max</sub>. Dolní hranice zóny je určena pro zdravotní
-            pohybové aktivity,
-            střední pro spalování tuků a horní hranice je pro rozvoj výkonnosti. Tuto horní hranici používají sportovci.
-          </p>
+          <p><mark>Aerobní pásmo</mark> je zóna vhodná pro vytrvalostní pohybové aktivity. Jedná se o pásmo přibližně
+            55–85 % vaší SF<sub>max</sub>. Sportovci tomuto tréninku říkají „trénink s kyslíkem“. Je to v podstatě
+            tělesná činnost,
+            která má
+            charakter delšího trvání a současně při této činnosti dochází v těle k fyziologickým procesům za přístupu
+            kyslíku. Při pohybu za přístupu kyslíku naše tělo využívá všechny energetické zdroje (cukry, tuky,
+            bílkoviny), které má k dispozici, pouze se liší jejich míra využití. Pokud náš pohyb je právě v aerobním
+            pásmu, hlavním zdrojem energie se stává tuk. Zásob tuku máme v těle mnohonásobně větší než zásoby cukrů. Tuk
+            je jako palivo také mnohem „čistší“, protože jeho spalováním nevznikají zplodiny, které by zaplavily naše
+            svaly únavou. Tuky však nestačí krýt nároky našeho organismu, pokud bychom se pohybovali příliš intenzívně.
+            Proto, pokud chceme třeba snižovat hmotnost nebo hubnout, je důležité se pohybovat v aerobní zóně a
+            pohybovou činnost musíme provádět také pravidelně, alespoň 3× týdně.</p>
           <p><mark>Anaerobní pásmo</mark> je zóna, ve které dochází k rozdílným metabolickým procesům a k uvolňování
-            zdrojů energie odlišným způsobem než v zóně aerobní,
-            a to bez přístupu kyslíku. Této zóně se zpravidla při sportovních aktivitách vyhýbejte.</p>
+            zdrojů energie
+            odlišným způsobem než v zóně aerobní, a to bez přístupu kyslíku. Při cvičení v anaerobním pásmu, které je
+            přibližně 85–100 % vaší SF<sub>max</sub>, dochází k vyčerpání zásob kyslíku v těle a vzniká tzv. „kyslíkový
+            dluh“.
+            Typickým příkladem takové činnosti je sprint na krátkou vzdálenost nebo co nejrychlejší výjezd kopce na
+            kole. Po takové činnosti jsme velmi zadýchaní ještě dlouho po ukončení pohybu, čímž se tělo snaží splatit
+            „kyslíkový dluh“. Nejvýznamnějším zdrojem energie jsou cukry. Hrají rozhodující roli v průběhu intenzívní
+            jízdy. Čím rychleji nebo silněji běžíme nebo šlapeme do pedálů, tím více spalujeme zásoby cukru v těle. Při
+            spalování cukrů, na rozdíl od aerobního tréninku, vznikají metabolické zplodiny jako například kyselina
+            mléčná. To je také důvod, proč nás po sprintu, rychlé jízdě po rovině nebo v průběhu namáhavého stoupání
+            začnou bolet svaly. Současně také stoupá spotřeba kyslíku, který zajišťuje spalování cukrů. Proto se také
+            zadýcháme. Zrychluje se také celý metabolismus a stoupá tepová frekvence. Ta je nejlepším ukazatelem
+            intenzity pohybu. Zásoby cukru v těle jsou omezené, a proto je musíme během déletrvajícího, intenzivnějšího
+            výkonu doplňovat.</p>
           <h3 class="h4 pt-4" id="item-5">Klidová srdeční frekvence</h3>
           <hr class="my-4">
           <p>Klidová srdeční frekvence je velmi závislá na stavu trénovanosti. Je známo, že u netrénovaných osob pracuje
@@ -247,7 +265,7 @@
           </p>
         </div>
         <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 26.09.2019</p>
+          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 29.09.2019</p>
         </div>
       </div>
     </div>
