[added] license info (by-sa)

--- a/zdatnost/index.html
+++ b/zdatnost/index.html
@@ -109,20 +109,29 @@
 	</main>
 
 	<footer class="footer mt-auto py-3 text-muted bg-dark">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
-							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
-							rozvoje digitální gramotnosti</a>
-					</p>
-				</div>
-				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 29.09.2019</p>
-				</div>
-			</div>
-		</div>
-	</footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 py-1">
+                        <p class="text-white-50 text-lg-left text-center">Naposledy aktualizováno 05.10.2019</p>
+                        <p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+                                href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white">Podpora
+                                rozvoje digitální gramotnosti</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-6 py-1">
+                        <div class="d-flex">
+                            <div class="w-25 d-flex align-items-center">
+                                <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode"><img src="imgs/by-sa.svg"
+                                        class="license" alt="Licence BY-SA 4.0"></a>
+                            </div>
+                            <p class="pl-3 text-white-50">Tento materiál je včetně všech svých
+                                částí licencován licencí <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode"
+                                    class="text-white">Creative Commons BY-SA 4.0</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
