[initial commit] gymnastic

--- a/atletika/teorie.html
+++ b/atletika/teorie.html
@@ -95,7 +95,7 @@
             používá rozběh, jako je například skok daleký, skok vysoký nebo hod oštěpem. Ve větší míře se však využívá u
             delších běžeckých tratí při udržování běžecké rychlosti. Používáte ho i při vašem rozcvičování v rámci
             hodiny tělesné výchovy. Jelikož švihový způsob běhu využíváte v atletice i v dalších sportech ve větší míře,
-            proto se tomuto způsobu budeme následně věnovat se, snahou o vaše zlepšení a zdokonalení.
+            proto se tomuto způsobu budeme následně věnovat se, snahou o vaše zlepšení a zdokonalení.</p>
 
             <h4 class="h5 pt-2">Charakteristika švihového způsobu běhu</h4>
             <ul>
@@ -435,11 +435,12 @@
   <script src="js/lightbox.min.js"></script>
 
   <script>
-    lightbox.option({
-      'alwaysShowNavOnTouchDevices': true,
-      'wrapAround': true,
-    })
-  </script>
+      lightbox.option({
+        'alwaysShowNavOnTouchDevices': true,
+        'wrapAround': true,
+        'albumLabel': "Obrázek %1 z %2",
+      })
+    </script>
 
 </body>
 
