--- a/zdatnost/teorie.html
+++ b/zdatnost/teorie.html
@@ -285,15 +285,15 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/lightbox.min.js"></script>
+	<script src="js/lightbox.min.js"></script>
 
-  <script>
-    lightbox.option({
-      'alwaysShowNavOnTouchDevices': true,
-      'wrapAround': true,
-    })
-  </script>
-
+	<script>
+		lightbox.option({
+			'alwaysShowNavOnTouchDevices': true,
+			'wrapAround': true,
+			'albumLabel': "Obrázek %1 z %2",
+		})
+	</script>
 </body>
 
 </html>
