[revision] video format

--- a/gymnastika/cviceni.html
+++ b/gymnastika/cviceni.html
@@ -12,7 +12,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>DG – Gymnastika | Technika provedení</title>
+  <title>DG – Gymnastika | Průpravná cvičení</title>
 </head>
 
 <body class="d-flex flex-column h-100" data-spy="scroll" data-target="#content-menu" data-offset="100">
